cursive-bootstrap/tests/ui/E-TYP/E-TYP-1507.cursive
// RUN: compile-fail
// DIAG: E-TYP-1507
// SPEC: 5.2
// DESC: Procedure with non-unit return type requires explicit return statement

public procedure foo() -> i32 {  //~ ERROR E-TYP-1507: missing return
    let x: i32 = 42
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
